infrastructure/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v2.11
          args:
            - "--providers.kubernetescrd"
            - "--providers.kubernetesingress"
            - "--entrypoints.web.address=:80"
            - "--log.level=INFO"
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
