infrastructure/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
