infrastructure/traefik-service.yaml
# traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
